--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<title>Productos |Torno Motos JR</title>
 	<script src="icono.js"></script>
 	<script src="scroll.js"></script>
+	<script src="jquery.js"></script>
+	<link href="/your-path-to-fontawesome/css/fontawesome.css" rel="stylesheet">
 </head>
 <body>
 	<header id="header">
@@ -31,6 +33,7 @@
 				</div>
 		</div>
 	</header>
+	<button id="topBtn"><i class="fas da-arrow-up">H</i></fa-arrow-up></button>
 	<div class="cajafotoprin">
 
 	</div>
@@ -228,6 +231,7 @@
 	<script src="animacionesmuuri.js"></script>
 	<script src="muri.js"></script>
 	<script src="main.js"></script>
+	<script src="botonbacktotop.js"></script>
 	
 </body>
 </html>
