--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<script src="scroll.js"></script>
 	<script src="jquery.js"></script>
 	<link href="/your-path-to-fontawesome/css/fontawesome.css" rel="stylesheet">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<header id="header">
@@ -33,7 +34,7 @@
 				</div>
 		</div>
 	</header>
-	<button id="topBtn"><i class="fas da-arrow-up">H</i></fa-arrow-up></button>
+	<button id="topBtn"><span class="icon-arrow-up2"></span></button>
 	<div class="cajafotoprin">
 
 	</div>
