--- a/index.html
+++ b/index.html
@@ -1,23 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
+	<meta name="theme-color" content="#3FEA50" />
+	<title>Torno Motos Jr</title>
+	<link rel="stylesheet" href="./css/hs.css" type="text/css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+	<meta name="viewport"
+		content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	<link rel="stylesheet" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,500,600,700,700i,800&display=swap" rel="stylesheet">	<script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
-	<link rel="stylesheet" href="./css/repuestosstyle.css">
-	<title>Productos |Torno Motos JR</title>
+
+	<!-- <script src="./js/jquery.js"></script> -->
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script> -->
+	<script src="https://kit.fontawesome.com/a076d05399.js"></script>
 	<script src="./js/script.js"></script>
 	<script src="./js/icono.js"></script>
 	<script src="./js/scroll.js"></script>
+	<script src="./js/repuestos.js"></script>
+	<script src="./js/scriptformulario.js"></script>
 	<script src="./js/jquery-3.2.1.js"></script>
-	<link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
 	<header id="header">
 		<div class="barramenu">
 			<nav>
-				<div class="cajalogo"><img src="./imgproductos/logo.png" alt=""></div>
+				<div class="cajalogo"><img src="./imagenes/logo.png" alt=""></div>
 				<ul class="ulmenu">
 					<li class="limenu"><a class="amenu" href="">Inicio</a></li>
 					<li class="limenu submenu" id="serviciosmenu"><div class="servmenu"><a class="amenu servlink" href="https://www.youtube.com/watch?v=kP6_nlTdPgI">Servicios </a> <div class="cajadown"><p class="icon-arrow-down2 down"></p></div></div>
@@ -33,9 +43,9 @@
 							<li><a href="#">Encamisada de cilindros</a></li>
 						</ul>
 					</li>
-					<li class="limenu"><a class="amenu" href="">Repuestos</a></li>
+					<li class="limenu"><a class="amenu" href="./repuestos.html">Repuestos</a></li>
 					<li class="limenu"><a class="amenu" href="">Nosotros</a></li>
-					<li class="limenu"><a class="amenu" href="">Contacto</a></li>
+					<li class="limenu"><a class="amenu" href="./contacto.html">Contacto</a></li>
 					<li class="limenu"><a class="amenu" href="">Acceder</a></li>
 				</ul>
 				<div class="cajaicono">
@@ -44,8 +54,17 @@
 					</div>
 				</div>
 		</div>
-	</header>
-	<button id="topBtn"><span class="icon-arrow-up2"></span></button>
+    </header>
+    <main>
+        <div class="social-bar">
+			<div class="social-bar">
+				<a href="https://es-la.facebook.com/tornomotosjr" class="icon icon-facebook" target="_blank"></a>
+				<a href="https://www.instagram.com/devcodela/" class="icon icon-instagram" target="_blank"></a>
+				<a href="https://www.youtube.com/c/devcodela" class="icon icon-youtube" target="_blank"></a>
+				<a href="https://api.whatsapp.com/send?phone=+57 3134943255&text=Hola%20Quisiera%20más%20información" class="icon icon-whatsapp" target="_blank"></a>
+			</div>
+		</div>
+        <button id="topBtn"><span class="icon-arrow-up2"></span></button>
 	<div class="cajafotoprin">
 
 	</div>
@@ -239,11 +258,11 @@
 
 		</div>
 	</div>
-	
-	<script src="./js/animacionesmuuri.js"></script>
+    </main>
+    
+    <script src="./js/animacionesmuuri.js"></script>
 	<script src="./js/muri.js"></script>
 	<script src="./js/filtros.js"></script>
 	<script src="./js/botonbacktotop.js"></script>
-	
-</body>
+    </body>
 </html>
